--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.0.7",
+    "@prisma/client": "4.8.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "js-sha256": "^0.9.0",
+    "nanoid": "^4.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.2.4"
   }
 }
